--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "scrapper",
   "version": "1.0.0",
-  "description": "",
+  "description": "scrape gaming site",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": "13.8.0",
+    "npm": "6.13.6"
   },
   "keywords": [],
   "author": "mayheptad",
