--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "mongoose": "^5.11.15",
+    "node-fetch": "^2.6.1",
     "puppeteer": "^5.5.0"
   }
 }
